<resources>
    <string name="app_name">Firebase</string>
    <string name="Login">Silahkan Login </string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="label">label</string>
    <string name="daftar_sekarang">Belum punya akun? Daftar sekarang</string>
    <string name="Register">Silahkan Daftar</string>
    <string name="login_sekarang">Sudah punya akun? Silahkan Login</string>
    <string name="Title">Welcome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>